src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>Knowledge</label>
    <pluralLabel>KnowledgeTest1902</pluralLabel>
    <fields>
        <fullName>Article_Category__c</fullName>
        <label>Article Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Management</fullName>
                </value>
                <value>
                    <fullName>Order Intake Forecast</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>General Experience</fullName>
                </value>
                <value>
                    <fullName>Gates/LOA</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Customer 360</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Partner Business (PRM)</fullName>
                </value>
                <value>
                    <fullName>Reporting/Analytics</fullName>
                </value>
                <value>
                    <fullName>Lead Mgmt</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>LOA</fullName>
                </value>
                <value>
                    <fullName>Prospect/Account Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_AdditionalEnvironmentDetails__c</fullName>
        <description>Any more additional details that are present in the article.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Environment Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Additional__c</fullName>
        <description>Any more additional details that are present in the article.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Environment Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_AlarmCategory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alarm Category</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AlarmID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alarm ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AnswerOrResolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer or Resolution(*)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Approver__c</fullName>
        <description>Field Is used for Capture name of approver</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ArticleReferenceURL__c</fullName>
        <formula>HYPERLINK(&quot;https://nokia.lightning.force.com/lightning/Knowledge__kav/&quot;&amp;CH_KnowlegdeArticleId__c&amp;&quot;/view&quot;,&quot;Click here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Reference URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ArticleTitle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_BusinessGroup__c</fullName>
        <label>Business Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>FN</fullName>
                </value>
                <value>
                    <fullName>ION</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>NoBL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_CLIAlarm__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CLI Alarm</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Candidate_for_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used for external  process approval</description>
        <inlineHelpText>Set this flag if the artcile version is candidate for external users.</inlineHelpText>
        <label>Candidate for External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Id to Case from which article was created</description>
        <inlineHelpText>Case Id to Case from which article was created</inlineHelpText>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Category__c</fullName>
        <description>Which category does the problem belongs to should be selected.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Known Issue</fullName>
                    <default>true</default>
                    <label>Known Issue</label>
                </value>
                <value>
                    <fullName>Known Error</fullName>
                </value>
                <value>
                    <fullName>Known Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Cause__c</fullName>
        <description>The cause for what the article is been created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_ComingFromApprovalProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify whether the article crossed the process</description>
        <label>Coming from Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_DiagnosticSteps__c</fullName>
        <description>The steps that are required for the solving the problem.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Diagnostic Steps</label>
        <length>51200</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_InApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_InformationForInternalAudiences__c</fullName>
        <description>This field contains the information that is to be shared by the internal audience.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Information for Internal Audiences</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_KB_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH KB Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CH_Keywords__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_KnowledgeRecordTypeCheck__c</fullName>
        <formula>OR(
RecordType.DeveloperName = &apos;CH_HowTo&apos;,
RecordType.DeveloperName = &apos;CH_KnownError&apos;,
RecordType.DeveloperName = &apos;CH_Standard&apos;,
RecordType.DeveloperName = &apos;CH_Resolution&apos;,
RecordType.DeveloperName = &apos;CH_Alarm&apos;,
RecordType.DeveloperName = &apos;CH_TechnicalProcedure&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Record Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_KnowlegdeArticleId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KnowlegdeArticleId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Link__c</fullName>
        <formula>HYPERLINK( CH_OrgUrl__c + &quot;/lightning/r/Knowledge__kav/&quot; + Id + &quot;/view&quot;, Title, &quot;_blank&quot;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Minor_changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request for minor change of article</description>
        <inlineHelpText>Set this flag if new edition is subject to minor or cosmetic  changes. Current published version will be updated</inlineHelpText>
        <label>Minor Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_OrgUrl__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <label>Org Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Preparation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preparation</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Prerequisites__c</fullName>
        <description>The thing that is required as a prior condition for something else to happen.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prerequisites</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_ProblemDescriptionRequired__c</fullName>
        <description>The problem faced should be mentioned here.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Problem Description(*)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_ProcedureRequired__c</fullName>
        <description>The Procedure required that can be used for the article.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Procedure(*)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge (Product)</relationshipLabel>
        <relationshipName>Knowledge11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge (Product 1)</relationshipLabel>
        <relationshipName>Knowledge2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge (Product 3)</relationshipLabel>
        <relationshipName>Knowledge3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Release_1_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release 1.1</label>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>Knowledge (Product Release 1)</relationshipLabel>
        <relationshipName>Knowledge2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Release_1_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release 1.2</label>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>Knowledge (Product Release 1.2)</relationshipLabel>
        <relationshipName>Knowledge3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Release_1_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release 1.3</label>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>Knowledge (Product Release 1.3)</relationshipLabel>
        <relationshipName>Knowledge4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Products_Short__c</fullName>
        <description>This field is used to refine search of knowledge articles by Product</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Publisher__c</fullName>
        <description>Field is used for capturing publisher field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Publisher</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_PurposeRequired__c</fullName>
        <description>The purpose for creating the article.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose(*)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_QuestionOrProductDescription__c</fullName>
        <description>The Question or Problem Description should be written here.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question(*)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_RecordType_Picklist__c</fullName>
        <description>This field is used to refine search of knowledge articles by Record Type</description>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm</fullName>
                </value>
                <value>
                    <fullName>Announcement</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Content</fullName>
                </value>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Internal Knowledge</fullName>
                </value>
                <value>
                    <fullName>Known Error</fullName>
                </value>
                <value>
                    <fullName>Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Standard Article</fullName>
                </value>
                <value>
                    <fullName>Technical Procedure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Related_Articles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Repair__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Repair</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To assign users for review of article</description>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Risks__c</fullName>
        <description>The Risks that are faced due to creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_RollbackAndRecoveryProcedure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rollback And Recovery Procedure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Rollback__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rollback And Recovery Procedure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_SA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SA</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Severity</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Solution__c</fullName>
        <description>The Solution for the problem should be mentioned here.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Solution</label>
        <length>76800</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_TL1Alarm__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TL1 Alarm</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_VerificationOfResults__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Of Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Version_Created_By__c</fullName>
        <description>To capture user who edited the article.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Created By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Warnings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Warnings</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_WorkAround__c</fullName>
        <description>The method for overcoming the problem or limitation in a program or system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WorkAround</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_WorkgroupName__c</fullName>
        <formula>CH_Workgroup__r.Name</formula>
        <label>Workgroup Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workgroup(*)</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_To_KB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Link to Reference Material</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>New_Flag_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Flag Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Knowledge_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Knowledge Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Knowledge_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Knowledge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Important</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proficiency_Level__c</fullName>
        <label>Proficiency Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>PSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Assets__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Support Assets</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Audience__c</fullName>
        <label>User Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dummy_Version_Created_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>dummy Version Created By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>CH_Archived_Articles_Global</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>CH Archived Articles - Global</label>
        <sharedTo>
            <group>CH_Workgroup_Approvers</group>
            <group>CH_Workgroup_Authors</group>
            <group>CH_Workgroup_Publishers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_Draft_Articles_Global</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>ARTICLE_NUMBER</field>
            <operation>equals</operation>
            <value>000005445</value>
        </filters>
        <label>CH Draft Articles - Global</label>
        <sharedTo>
            <group>CH_Workgroup_Approvers</group>
            <group>CH_Workgroup_Authors</group>
            <group>CH_Workgroup_Publishers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_Problem_Articles_Global</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>CH Problem Articles - Global</label>
        <sharedTo>
            <group>CH_Workgroup_Approvers</group>
            <group>CH_Workgroup_Authors</group>
            <group>CH_Workgroup_Publishers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_Published_Articles_Global</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>CH Published Articles - Global</label>
        <sharedTo>
            <group>CH_Workgroup_Approvers</group>
            <group>CH_Workgroup_Authors</group>
            <group>CH_Workgroup_Publishers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Knowledge_Published_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>Article_Category__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>PUBLISH_STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Internal_Knowledge</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Internal Knowledge- Published Articles</label>
    </listViews>
    <listViews>
        <fullName>LOA_Gate_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Article_Category__c</field>
            <operation>equals</operation>
            <value>Gates/LOA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Internal_Knowledge</value>
        </filters>
        <label>LOA/Gate Articles- Internal Knowledge</label>
    </listViews>
    <listViews>
        <fullName>OIF_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Internal_Knowledge</value>
        </filters>
        <filters>
            <field>Article_Category__c</field>
            <operation>equals</operation>
            <value>Order Intake Forecast</value>
        </filters>
        <label>OIF Articles- Internal Knowledge</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>ARTICLE_NUMBER</field>
            <operation>equals</operation>
            <value>000005445</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>VERSION_NUMBER</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <recordTypes>
        <fullName>Announcement</fullName>
        <active>true</active>
        <label>Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_Alarm</fullName>
        <active>true</active>
        <label>Alarm</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_HowTo</fullName>
        <active>true</active>
        <description>Tips &amp; Tricks to share the way to accomplish some basic, useful or day-to-day tasks having no major impact on system</description>
        <label>How To</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_KnownError</fullName>
        <active>true</active>
        <description>Do Not Use. Only for Problem initiated articles.</description>
        <label>Known Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_Resolution</fullName>
        <active>true</active>
        <description>Is an answer to a Problem (SR/AR). It is supposed to depict the way to diagnose, troubleshoot and definitely solve the issue. A solution must be created whenever a problem, clearly identified (symptoms) can occur many times : it must be reusable</description>
        <label>Resolution</label>
    </recordTypes>
</CustomObject>